@@ -58,11 +58,23 @@
 //========================================================================*/
 
 /* CONFIGURATION */
-
+#include <pkgconf/system.h>
 #include <pkgconf/memalloc.h>
 
 /* TYPE DEFINITIONS */
+#ifdef CYGPKG_KERNEL
+#include <cyg/kernel/kapi.h>
+#else
+typedef cyg_uint32 cyg_handle_t;
+#endif
 
+/*---------------------------------------------------------------------------*/
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+/*---------------------------------------------------------------------------*/
 struct cyg_mempool_var;
 typedef struct cyg_mempool_var cyg_mempool_var;
 
@@ -176,6 +188,16 @@ cyg_bool_t cyg_mempool_fix_waiting(cyg_handle_t fixpool) __THROW;
    provided. */
 void cyg_mempool_fix_get_info(cyg_handle_t fixpool, cyg_mempool_info *info) __THROW;
 
+/* user overrideable function invoked before running out of memory. */
+__externC void cyg_memalloc_alloc_fail(char * file, int line, cyg_int32 size) 
+     __THROW;
+
+/*---------------------------------------------------------------------------*/
+#ifdef __cplusplus
+}
+#endif
+
+/*---------------------------------------------------------------------------*/
 
 
 #endif /* ifndef CYGONCE_MEMALLOC_KAPI_H */
